--- a/class 18/core/templates/index.html
+++ b/class 18/core/templates/index.html
@@ -7,5 +7,21 @@
 <body>
     <h1>Index</h1>
     <h2>{{curso}}</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Preço</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for produto in produtos %}
+                <tr>
+                    <td><a href="{% url 'produto' produto.id %}">{{produto.nome}}</a></td>
+                    <td>{{produto.preco}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
