--- a/django1/core/templates/produto.html
+++ b/django1/core/templates/produto.html
@@ -2,12 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Produto</title>
 </head>
 <body>
-    <h1>index.html</h1>
-    <h2>Django1</h2>
-    <h3>{{curso}}</h3>
+    <h1>produto.html</h1>
     <table style="width:50%">
         <thead>
             <tr>
@@ -17,13 +15,11 @@
             </tr>
         </thead>
         <tbody>
-            {%for produto in produtos%}
                 <tr>
-                    <td><a href="{%url 'produto' produto.pk%}">{{produto.nome}}</a></td>
+                    <td><a href="{%url 'index'%}">{{produto.nome}}</a></td>
                     <td>{{produto.preco}}</td>
                     <td>{{produto.estoque}}</td>
                 </tr>
-            {%endfor%}
         </tbody>
     </table>
 </body>
